# thesis_ros_ws

./: .gitignore
ROS-TCP-Endpoint/: CMakeLists.txt
ROS-TCP-Endpoint/.git-ungitted/: FETCH_HEAD  index  packed-refs
ROS-TCP-Endpoint/.git-ungitted/logs/: HEAD
ROS-TCP-Endpoint/.git-ungitted/logs/refs/heads/: main-ros2
ROS-TCP-Endpoint/.git-ungitted/logs/refs/remotes/origin/: HEAD
ROS-TCP-Endpoint/.git-ungitted/objects/pack/: pack-522454fd5e764f72eee6a082f30aec535cdc39b1.idx  pack-522454fd5e764f72eee6a082f30aec535cdc39b1.pack
ROS-TCP-Endpoint/launch/: endpoint.py
depthai-ros/.git-ungitted/: FETCH_HEAD  config  index  packed-refs
depthai-ros/.git-ungitted/logs/: HEAD
depthai-ros/.git-ungitted/objects/pack/: pack-063045b55264484d1078ecd650c98fb4239cfa7a.idx  pack-5ea0ba4fcc42113d00ebc7f24e1d8045c7f1086a.idx  pack-5ea0ba4fcc42113d00ebc7f24e1d8045c7f1086a.pack
depthai-ros/.git-ungitted/refs/heads/: humble
depthai-ros/.git-ungitted/refs/tags/: v2.10.0-humble  v2.10.0-iron  v2.10.0-jazzy  v2.10.1-jazzy
depthai-ros/depthai_descriptions/urdf/: oak-d.urdf
depthai-ros/depthai_examples/launch/: rgb_stereo_node.launch.py  stereo_inertial_node.launch.py  stereo_inertial_node_reg.launch.py
depthai-ros/depthai_examples/src/: stereo_inertial_publisher.cpp
depthai-ros/depthai_ros_driver/config/: sr_rgbd.yaml
depthai-ros/depthai_ros_driver/config/rviz/: rgbd.rviz
depthai-ros/depthai_ros_driver/launch/: sr_rgbd_pcl.launch.py
dim_cpp/: CMakeLists.txt  package.xml
dim_cpp/config/: fake_alfred_controllers.yaml
dim_cpp/launch/: moveit_converter.launch.py  odom_vis.launch.py  visualize_urdf.launch.py  visualize_urdf_only.launch.py
dim_cpp/meshes/devkit_base/: devkit_base_no_wheels.stl  devkit_base_no_wheels_collision.stl  devkit_base_wheels.sdf  devkit_base_wheels.stl  devkit_base_wheels.urdf  devkit_base_wheels_collision.stl  pan_tilt_base_collision.stl  pan_tilt_head_collision.stl  pan_tilt_pan_collision.stl  pillar_platform_collision.stl  piper_angled_mount_collision.stl
dim_cpp/meshes/linear_rail_manip/: JawAssembly2.stl
dim_cpp/meshes/openft/: openft-xarm-collision.stl
dim_cpp/piper_description/urdf/: piper_description.csv  piper_description.urdf  piper_description.xacro  piper_description_gazebo.xacro  piper_description_macro.xacro  piper_description_no_gripper_macro.xacro  piper_description_old.urdf  piper_no_gripper_description.csv  piper_no_gripper_description.urdf  piper_no_gripper_description.xacro  piper_no_gripper_description_gazebo.xacro  piper_no_gripper_description_old.urdf
dim_cpp/rviz/: view_odom.rviz  visualize.rviz
dim_cpp/src/: data_recorder.cpp  moveit_converter.cpp  point_cloud_transformer.cpp  transform_publisher.cpp
dim_cpp/srdf/: alfred_base.srdf.xacro  alfred_base_descr.srdf.xacro  alfred_gripper.srdf.xacro
dim_cpp/urdf/: alfred_base_descr.urdf  alfred_base_descr.urdf.xacro  alfred_gripper_ros2_control.xacro  alfred_pan_tilt_ros2_control.xacro  alfred_pillar_platform_ros2_control.xacro  alfred_wheels_ros2_control.xacro  calc_inertia_for_urdf.py  depthai_descr.urdf.xacro  devkit_base_descr.urdf  devkit_base_descr.urdf.xacro  xarm6_openft_gripper.urdf  xarm_devkit_base_descr.urdf  xarm_devkit_base_descr.urdf.xacro  xarm_openft_gripper.urdf.xacro  zed_descr.urdf.xacro  zed_macro.urdf.xacro
dim_cpp/urdf/include/: alfred_base.urdf.xacro  alfred_gripper.urdf.xacro  base_macro.urdf.xacro  depthai_macro.urdf.xacro  devkit_base.urdf.xacro  piper_angled_base.urdf.xacro
dim_cpp/urdf/meshes/: alfred_gripper_base-collision.stl  alfred_gripper_base-visual.stl  alfred_gripper_jaw-collision.stl  alfred_gripper_jaw-visual.stl  base-collision.stl  base-visual.stl  botwheel-collision.stl  botwheel-visual.stl  cameraholder-collision.stl  cameraholder-visual.stl  pillarplatform-collision.stl  pillarplatform-visual.stl  tiltbase-collision.stl  tiltbase-visual.stl
dim_cpp/urdf/xarm6/: xarm6.urdf
dimensional/: package.xml  setup.cfg  setup.py
dimensional/config/: planning_config.yaml
dimensional/dimensional/: alfred_controller.py  constraints_manipulator.py  fake_joint_state_pub.py  fake_joint_state_pub_tester.py  ft_driver.py  ft_vis.py  grasp_pipeline_test.py  gripper_action_client.py  object_processor.py  point_cloud_creator.py  pose_pub_test.py  pose_publisher.py  sim_cam_tf_pub.py  tf_to_twist_publisher.py  thesis_working.code-workspace
dimensional/launch/: moveit_converter.launch.py  planning.launch.py  sim_moveit.launch.py
dimensional/notebooks/: helper_functions.py  seg_generator.ipynb
dimensional/rviz/: point.rviz
dimensional/scripts/: tokenizer.py
ffmpeg_image_transport_msgs/.git-ungitted/: FETCH_HEAD  config  index  packed-refs
rplidar_ros/.git-ungitted/: config  index  packed-refs
xarm_ros2/.git-ungitted/: FETCH_HEAD  ORIG_HEAD  config  index  packed-refs
xarm_ros2/.git-ungitted/logs/: HEAD
xarm_ros2/.git-ungitted/refs/: stash
xarm_ros2/uf_ros_lib/uf_ros_lib/: moveit_configs_builder.py  uf_robot_utils.py
xarm_ros2/xarm_controller/config/: alfred_controllers.yaml  xarm7_controllers.yaml
xarm_ros2/xarm_controller/launch/: _dual_ros2_control.launch.py
xarm_ros2/xarm_description/launch/: _robot_description.launch.py  display.launch.py
xarm_ros2/xarm_description/rviz/: view_only_urdf.rviz
xarm_ros2/xarm_description/urdf/: xarm_device.urdf.xacro
xarm_ros2/xarm_moveit_config/: CMakeLists.txt  package.xml
xarm_ros2/xarm_moveit_config/launch/: _dual_robot_moveit_fake.launch.py  _dual_robot_moveit_realmove.launch.py  dual_xarm7_moveit_fake.launch.py  dual_xarm7_moveit_realmove.launch.py
xarm_ros2/xarm_moveit_config/rviz/: dual_moveit.rviz
xarm_ros2/xarm_moveit_config/srdf/: alfred_base_descr.srdf.xacro  xarm.srdf.xacro
xarm_ros2/xarm_moveit_servo/config/: xarm_moveit_servo_config.yaml
xarm_ros2/xarm_moveit_servo/launch/: _robot_moveit_servo_bare.launch.py  _robot_moveit_servo_realmove.launch.py  xarm_moveit_servo_fake_bare.launch.py
xarm_ros2/xarm_planner/: CMakeLists.txt
zed-ros2-wrapper/.git-ungitted/: config  index  packed-refs
zed-ros2-wrapper/zed-ros2-interfaces/: .git-ungitted
(+75 files in other folders)
